// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`polytomic > gets all urls from docs config 1`] = `
[
  "apidocs.polytomic.com/guides/introduction",
  "apidocs.polytomic.com/guides/ip-whitelisting",
  "apidocs.polytomic.com/guides/obtaining-api-keys",
  "apidocs.polytomic.com/guides/quickstart",
  "apidocs.polytomic.com/guides/native-clients",
  "apidocs.polytomic.com/guides/concepts",
  "apidocs.polytomic.com/guides/embedding-authentication",
  "apidocs.polytomic.com/guides/versioning",
  "apidocs.polytomic.com/guides/idempotent-requests",
  "apidocs.polytomic.com/guides/events",
  "apidocs.polytomic.com/guides/self-hosted-option",
  "apidocs.polytomic.com/guides/configuring-your-connections/overview",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/affinity",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/airtable",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/amplitude",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/api",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/apollo-io",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/asana",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/ascend",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/attio",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/aws-s-3",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/aws-athena",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/aws-open-search",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/azure-blob-storage",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/azure-sql",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/bigquery",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/cloud-sql-my-sql",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/cloud-sql-postgres",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/chargebee",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/construction-wire",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/cosmos-db",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/customer-io",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/databricks",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/datadog",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/dbt-cloud",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/delighted",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/dialpad",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/dittofeed",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/dynamo-db",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/facebook-ads",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/freshdesk",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/front",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/full-story",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/gong",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/google-cloud-storage",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/github",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/google-ads",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/google-workspace",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/google-sheets",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/harmonic",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/heap",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/honeycomb",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/hub-spot",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/intercom",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/iterable",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/jira",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/klaviyo",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/kustomer",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/linear",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/linkedin-ads",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/lob",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/mailercheck",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/marketo",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/mongo-db",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/microsoft-ads",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/my-sql",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/netsuite",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/outreach",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/pardot",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/pipedrive",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/postgres",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/predict-leads",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/quickbooks",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/recharge",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/redshift",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/redshift-serverless",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/reply-io",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/salesforce",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/segment",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/sftp",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/shopify",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/short-io",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/slack",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/snowflake",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/statsig",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/stripe",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/survicate",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/synapse",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/tixr",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/unbounce",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/uservoice",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/vanilla-forums",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/webhooks",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/zendesk-chat",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/zendesk-support",
  "apidocs.polytomic.com/guides/configuring-your-connections/connections/zoom-info",
  "apidocs.polytomic.com/guides/configuring-your-connections/cdc-streaming-from-databases",
  "apidocs.polytomic.com/guides/configuring-your-connections/syncing-to-custom-webhooks",
  "apidocs.polytomic.com/guides/code-examples/overview",
  "apidocs.polytomic.com/guides/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "apidocs.polytomic.com/guides/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "apidocs.polytomic.com/guides/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "apidocs.polytomic.com/guides/code-examples/model-sync-reverse-etl-from-snowflake-query-to-salesforce",
  "apidocs.polytomic.com/guides/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "apidocs.polytomic.com/guides/code-examples/joined-model-sync-from-postgres-airtable-and-stripe-to-hubspot",
  "apidocs.polytomic.com/guides/code-examples/model-sync-from-my-sql-to-snowflake",
  "apidocs.polytomic.com/guides/code-examples/model-sync-from-salesforce-to-netsuite",
  "apidocs.polytomic.com/api-reference/bulk-sync/list",
  "apidocs.polytomic.com/api-reference/bulk-sync/create",
  "apidocs.polytomic.com/api-reference/bulk-sync/get",
  "apidocs.polytomic.com/api-reference/bulk-sync/update",
  "apidocs.polytomic.com/api-reference/bulk-sync/remove",
  "apidocs.polytomic.com/api-reference/bulk-sync/activate",
  "apidocs.polytomic.com/api-reference/bulk-sync/start",
  "apidocs.polytomic.com/api-reference/bulk-sync/get-status",
  "apidocs.polytomic.com/api-reference/bulk-sync/get-source",
  "apidocs.polytomic.com/api-reference/bulk-sync/get-destination",
  "apidocs.polytomic.com/api-reference/bulk-sync/executions/list",
  "apidocs.polytomic.com/api-reference/bulk-sync/executions/get",
  "apidocs.polytomic.com/api-reference/bulk-sync/schemas/list",
  "apidocs.polytomic.com/api-reference/bulk-sync/schemas/patch",
  "apidocs.polytomic.com/api-reference/bulk-sync/schemas/get",
  "apidocs.polytomic.com/api-reference/bulk-sync/schemas/update",
  "apidocs.polytomic.com/api-reference/connections/get-types",
  "apidocs.polytomic.com/api-reference/connections/list",
  "apidocs.polytomic.com/api-reference/connections/create",
  "apidocs.polytomic.com/api-reference/connections/connect",
  "apidocs.polytomic.com/api-reference/connections/get",
  "apidocs.polytomic.com/api-reference/connections/update",
  "apidocs.polytomic.com/api-reference/connections/remove",
  "apidocs.polytomic.com/api-reference/connections/get-parameter-values",
  "apidocs.polytomic.com/api-reference/model-sync/get-source",
  "apidocs.polytomic.com/api-reference/model-sync/get-source-fields",
  "apidocs.polytomic.com/api-reference/model-sync/get-target",
  "apidocs.polytomic.com/api-reference/model-sync/get-target-fields",
  "apidocs.polytomic.com/api-reference/model-sync/list",
  "apidocs.polytomic.com/api-reference/model-sync/create",
  "apidocs.polytomic.com/api-reference/model-sync/get-schedule-options",
  "apidocs.polytomic.com/api-reference/model-sync/get",
  "apidocs.polytomic.com/api-reference/model-sync/update",
  "apidocs.polytomic.com/api-reference/model-sync/remove",
  "apidocs.polytomic.com/api-reference/model-sync/activate",
  "apidocs.polytomic.com/api-reference/model-sync/start",
  "apidocs.polytomic.com/api-reference/model-sync/get-status",
  "apidocs.polytomic.com/api-reference/model-sync/executions/list",
  "apidocs.polytomic.com/api-reference/model-sync/executions/get",
  "apidocs.polytomic.com/api-reference/model-sync/executions/get-log-urls",
  "apidocs.polytomic.com/api-reference/model-sync/executions/get-logs",
  "apidocs.polytomic.com/api-reference/schemas/refresh",
  "apidocs.polytomic.com/api-reference/schemas/get-status",
  "apidocs.polytomic.com/api-reference/schemas/get",
  "apidocs.polytomic.com/api-reference/schemas/get-records",
  "apidocs.polytomic.com/api-reference/models/post",
  "apidocs.polytomic.com/api-reference/models/preview",
  "apidocs.polytomic.com/api-reference/models/list",
  "apidocs.polytomic.com/api-reference/models/create",
  "apidocs.polytomic.com/api-reference/models/get",
  "apidocs.polytomic.com/api-reference/models/update",
  "apidocs.polytomic.com/api-reference/models/remove",
  "apidocs.polytomic.com/api-reference/models/sample",
  "apidocs.polytomic.com/api-reference/events/list",
  "apidocs.polytomic.com/api-reference/events/get-types",
  "apidocs.polytomic.com/api-reference/jobs/get",
  "apidocs.polytomic.com/api-reference/identity/get",
  "apidocs.polytomic.com/api-reference/organization/list",
  "apidocs.polytomic.com/api-reference/organization/create",
  "apidocs.polytomic.com/api-reference/organization/get",
  "apidocs.polytomic.com/api-reference/organization/update",
  "apidocs.polytomic.com/api-reference/organization/remove",
  "apidocs.polytomic.com/api-reference/users/list",
  "apidocs.polytomic.com/api-reference/users/create",
  "apidocs.polytomic.com/api-reference/users/get",
  "apidocs.polytomic.com/api-reference/users/update",
  "apidocs.polytomic.com/api-reference/users/remove",
  "apidocs.polytomic.com/api-reference/users/create-api-key",
  "apidocs.polytomic.com/api-reference/permissions/policies/list",
  "apidocs.polytomic.com/api-reference/permissions/policies/create",
  "apidocs.polytomic.com/api-reference/permissions/policies/get",
  "apidocs.polytomic.com/api-reference/permissions/policies/update",
  "apidocs.polytomic.com/api-reference/permissions/policies/remove",
  "apidocs.polytomic.com/api-reference/permissions/roles/list",
  "apidocs.polytomic.com/api-reference/permissions/roles/create",
  "apidocs.polytomic.com/api-reference/permissions/roles/get",
  "apidocs.polytomic.com/api-reference/permissions/roles/update",
  "apidocs.polytomic.com/api-reference/permissions/roles/remove",
  "apidocs.polytomic.com/api-reference/webhooks/list",
  "apidocs.polytomic.com/api-reference/webhooks/create",
  "apidocs.polytomic.com/api-reference/webhooks/get",
  "apidocs.polytomic.com/api-reference/webhooks/update",
  "apidocs.polytomic.com/api-reference/webhooks/remove",
  "apidocs.polytomic.com/2024-02-08/guides/introduction",
  "apidocs.polytomic.com/2024-02-08/guides/ip-whitelisting",
  "apidocs.polytomic.com/2024-02-08/guides/obtaining-api-keys",
  "apidocs.polytomic.com/2024-02-08/guides/quickstart",
  "apidocs.polytomic.com/2024-02-08/guides/native-clients",
  "apidocs.polytomic.com/2024-02-08/guides/concepts",
  "apidocs.polytomic.com/2024-02-08/guides/embedding-authentication",
  "apidocs.polytomic.com/2024-02-08/guides/versioning",
  "apidocs.polytomic.com/2024-02-08/guides/idempotent-requests",
  "apidocs.polytomic.com/2024-02-08/guides/events",
  "apidocs.polytomic.com/2024-02-08/guides/self-hosted-option",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/overview",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/affinity",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/airtable",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/amplitude",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/api",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/apollo-io",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/asana",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/ascend",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/attio",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/aws-s-3",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/aws-athena",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/aws-open-search",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/azure-blob-storage",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/azure-sql",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/bigquery",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/cloud-sql-my-sql",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/cloud-sql-postgres",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/chargebee",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/construction-wire",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/cosmos-db",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/customer-io",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/databricks",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/datadog",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/dbt-cloud",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/delighted",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/dialpad",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/dittofeed",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/dynamo-db",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/facebook-ads",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/freshdesk",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/front",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/full-story",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/gong",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/google-cloud-storage",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/github",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/google-ads",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/google-workspace",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/google-sheets",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/harmonic",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/heap",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/honeycomb",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/hub-spot",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/intercom",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/iterable",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/jira",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/klaviyo",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/kustomer",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/linear",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/linkedin-ads",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/lob",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/mailercheck",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/marketo",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/mongo-db",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/microsoft-ads",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/my-sql",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/netsuite",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/outreach",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/pardot",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/pipedrive",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/postgres",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/predict-leads",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/quickbooks",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/recharge",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/redshift",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/redshift-serverless",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/reply-io",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/salesforce",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/segment",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/sftp",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/shopify",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/short-io",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/slack",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/snowflake",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/statsig",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/stripe",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/survicate",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/synapse",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/tixr",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/unbounce",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/uservoice",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/vanilla-forums",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/webhooks",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/zendesk-chat",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/zendesk-support",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/connections/zoom-info",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/cdc-streaming-from-databases",
  "apidocs.polytomic.com/2024-02-08/guides/configuring-your-connections/syncing-to-custom-webhooks",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/overview",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/model-sync-reverse-etl-from-snowflake-query-to-salesforce",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/joined-model-sync-from-postgres-airtable-and-stripe-to-hubspot",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/model-sync-from-my-sql-to-snowflake",
  "apidocs.polytomic.com/2024-02-08/guides/code-examples/model-sync-from-salesforce-to-netsuite",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/activate",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/start",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/get-status",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/get-source",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/get-destination",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/executions/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/executions/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/schemas/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/schemas/patch",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/schemas/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/bulk-sync/schemas/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/get-types",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/connect",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/connections/get-parameter-values",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-source",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-source-fields",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-target",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-target-fields",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-schedule-options",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/activate",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/start",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/get-status",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/executions/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/executions/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/executions/get-log-urls",
  "apidocs.polytomic.com/2024-02-08/api-reference/model-sync/executions/get-logs",
  "apidocs.polytomic.com/2024-02-08/api-reference/schemas/refresh",
  "apidocs.polytomic.com/2024-02-08/api-reference/schemas/get-status",
  "apidocs.polytomic.com/2024-02-08/api-reference/schemas/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/schemas/get-records",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/post",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/preview",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/models/sample",
  "apidocs.polytomic.com/2024-02-08/api-reference/events/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/events/get-types",
  "apidocs.polytomic.com/2024-02-08/api-reference/jobs/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/identity/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/organization/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/organization/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/organization/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/organization/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/organization/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/users/create-api-key",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/policies/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/policies/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/policies/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/policies/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/policies/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/roles/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/roles/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/roles/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/roles/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/permissions/roles/remove",
  "apidocs.polytomic.com/2024-02-08/api-reference/webhooks/list",
  "apidocs.polytomic.com/2024-02-08/api-reference/webhooks/create",
  "apidocs.polytomic.com/2024-02-08/api-reference/webhooks/get",
  "apidocs.polytomic.com/2024-02-08/api-reference/webhooks/update",
  "apidocs.polytomic.com/2024-02-08/api-reference/webhooks/remove",
  "apidocs.polytomic.com/2023-04-25/introduction",
  "apidocs.polytomic.com/2023-04-25/obtaining-api-keys",
  "apidocs.polytomic.com/2023-04-25/quickstart",
  "apidocs.polytomic.com/2023-04-25/native-clients",
  "apidocs.polytomic.com/2023-04-25/concepts",
  "apidocs.polytomic.com/2023-04-25/embedding-authentication",
  "apidocs.polytomic.com/2023-04-25/versioning",
  "apidocs.polytomic.com/2023-04-25/idempotent-requests",
  "apidocs.polytomic.com/2023-04-25/events",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/cdc-streaming-from-databases",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/affinity",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/airtable",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/amplitude",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/api",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/apollo-io",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/asana",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/ascend",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/attio",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/aws-s-3",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/aws-athena",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/aws-open-search",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/azure-blob-storage",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/azure-sql",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/biq-query",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/cloud-sql-my-sql",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/cloud-sql-postgres",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/chargebee",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/construction-wire",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/cosmos-db",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/customer-io",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/databricks",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/datadog",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/dbt-cloud",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/delighted",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/dialpad",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/dittofeed",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/dynamo-db",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/facebook-ads",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/freshdesk",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/front",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/full-story",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/google-cloud-storage",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/github",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/google-ads",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/google-workspace",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/google-sheets",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/harmonic",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/heap",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/honeycomb",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/hub-spot",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/intercom",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/iterable",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/jira",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/klaviyo",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/kustomer",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/linear",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/linkedin-ads",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/lob",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/mailercheck",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/marketo",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/mongo-db",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/microsoft-ads",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/my-sql",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/netsuite",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/outreach",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/pardot",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/pipedrive",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/postgres",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/predict-leads",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/quickbooks",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/recharge",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/redshift",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/redshift-serverless",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/reply-io",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/salesforce",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/segment",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/sftp",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/shopify",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/short-io",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/slack",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/snowflake",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/statsig",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/stripe",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/survicate",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/synapse",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/tixr",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/unbounce",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/uservoice",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/vanilla-forums",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/webhooks",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/zendesk-chat",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/zendesk-support",
  "apidocs.polytomic.com/2023-04-25/configuring-your-connections/connections/zoom-info",
  "apidocs.polytomic.com/2023-04-25/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "apidocs.polytomic.com/2023-04-25/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "apidocs.polytomic.com/2023-04-25/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "apidocs.polytomic.com/2023-04-25/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get-destination",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get-source",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get-source-schema",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get-source-status",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/activate",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/start",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/get-status",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/executions/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/executions/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/schemas/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/schemas/patch",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/schemas/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/bulk-sync/schemas/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-types",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/connect",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-parameter-values",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-source",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-source-fields",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-target",
  "apidocs.polytomic.com/2023-04-25/api-reference/connections/get-target-fields",
  "apidocs.polytomic.com/2023-04-25/api-reference/schemas/get-records",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/post",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/preview",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/models/sample",
  "apidocs.polytomic.com/2023-04-25/api-reference/events/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/events/get-types",
  "apidocs.polytomic.com/2023-04-25/api-reference/jobs/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/identity/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/organization/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/organization/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/organization/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/organization/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/organization/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/users/create-api-key",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/policies/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/policies/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/policies/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/policies/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/policies/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/roles/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/roles/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/roles/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/roles/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/permissions/roles/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/get-schedule-options",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/update",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/activate",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/start",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/get-status",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/executions/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/executions/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/executions/get-log-urls",
  "apidocs.polytomic.com/2023-04-25/api-reference/model-sync/executions/get-logs",
  "apidocs.polytomic.com/2023-04-25/api-reference/webhooks/list",
  "apidocs.polytomic.com/2023-04-25/api-reference/webhooks/create",
  "apidocs.polytomic.com/2023-04-25/api-reference/webhooks/get",
  "apidocs.polytomic.com/2023-04-25/api-reference/webhooks/remove",
  "apidocs.polytomic.com/2023-04-25/api-reference/webhooks/update",
  "apidocs.polytomic.com/2022-12-12/introduction",
  "apidocs.polytomic.com/2022-12-12/obtaining-api-keys",
  "apidocs.polytomic.com/2022-12-12/quickstart",
  "apidocs.polytomic.com/2022-12-12/native-clients",
  "apidocs.polytomic.com/2022-12-12/concepts",
  "apidocs.polytomic.com/2022-12-12/embedding-authentication",
  "apidocs.polytomic.com/2022-12-12/versioning",
  "apidocs.polytomic.com/2022-12-12/idempotent-requests",
  "apidocs.polytomic.com/2022-12-12/events",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/cdc-streaming-from-databases",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/affinity",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/airtable",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/amplitude",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/api",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/apollo-io",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/asana",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/ascend",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/attio",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/aws-s-3",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/aws-athena",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/aws-open-search",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/azure-blob-storage",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/azure-sql",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/biq-query",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/cloud-sql-my-sql",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/cloud-sql-postgres",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/chargebee",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/construction-wire",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/cosmos-db",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/customer-io",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/databricks",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/datadog",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/dbt-cloud",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/delighted",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/dialpad",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/dittofeed",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/dynamo-db",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/facebook-ads",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/freshdesk",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/front",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/full-story",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/google-cloud-storage",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/github",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/google-ads",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/google-workspace",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/google-sheets",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/harmonic",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/heap",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/honeycomb",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/hub-spot",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/intercom",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/iterable",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/jira",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/klaviyo",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/kustomer",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/linear",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/linkedin-ads",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/lob",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/mailercheck",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/marketo",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/mongo-db",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/microsoft-ads",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/my-sql",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/netsuite",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/outreach",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/pardot",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/pipedrive",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/postgres",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/predict-leads",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/quickbooks",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/recharge",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/redshift",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/redshift-serverless",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/reply-io",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/salesforce",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/segment",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/sftp",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/shopify",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/short-io",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/slack",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/snowflake",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/statsig",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/stripe",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/survicate",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/synapse",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/tixr",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/unbounce",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/uservoice",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/vanilla-forums",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/webhooks",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/zendesk-chat",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/zendesk-support",
  "apidocs.polytomic.com/2022-12-12/configuring-your-connections/connections/zoom-info",
  "apidocs.polytomic.com/2022-12-12/code-examples/bulk-sync-elt-from-hub-spot-to-postgre-sql",
  "apidocs.polytomic.com/2022-12-12/code-examples/bulk-sync-elt-from-salesforce-to-s-3",
  "apidocs.polytomic.com/2022-12-12/code-examples/bulk-sync-elt-from-salesforce-to-snowflake",
  "apidocs.polytomic.com/2022-12-12/code-examples/model-sync-reverse-etl-from-mongo-db-to-salesforce",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/get-destination",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/get-source",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/activate",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/schemas/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/schemas/patch",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/schemas/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/bulk-sync/schemas/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-types",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-parameter-values",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-source",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-source-fields",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-target",
  "apidocs.polytomic.com/2022-12-12/api-reference/connections/get-target-fields",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/post",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/preview",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/models/sample",
  "apidocs.polytomic.com/2022-12-12/api-reference/events/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/events/get-types",
  "apidocs.polytomic.com/2022-12-12/api-reference/jobs/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/identity/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/organization/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/organization/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/organization/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/organization/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/organization/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/users/create-api-key",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/policies/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/policies/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/policies/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/policies/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/policies/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/roles/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/roles/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/roles/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/roles/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/permissions/roles/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/get-schedule-options",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/update",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/activate",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/start",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/get-status",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/executions/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/executions/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/executions/get-log-urls",
  "apidocs.polytomic.com/2022-12-12/api-reference/model-sync/executions/get-logs",
  "apidocs.polytomic.com/2022-12-12/api-reference/webhooks/list",
  "apidocs.polytomic.com/2022-12-12/api-reference/webhooks/create",
  "apidocs.polytomic.com/2022-12-12/api-reference/webhooks/get",
  "apidocs.polytomic.com/2022-12-12/api-reference/webhooks/remove",
  "apidocs.polytomic.com/2022-12-12/api-reference/webhooks/update",
  "apidocs.polytomic.com/2021-05-23/introduction",
  "apidocs.polytomic.com/2021-05-23/obtaining-api-keys",
  "apidocs.polytomic.com/2021-05-23/quickstart",
  "apidocs.polytomic.com/2021-05-23/concepts",
  "apidocs.polytomic.com/2021-05-23/embedding-authentication",
  "apidocs.polytomic.com/2021-05-23/versioning",
  "apidocs.polytomic.com/2021-05-23/idempotent-requests",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/cdc-streaming-from-databases",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/affinity",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/airtable",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/amplitude",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/api",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/apollo-io",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/asana",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/ascend",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/attio",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/aws-s-3",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/aws-athena",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/aws-open-search",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/azure-blob-storage",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/azure-sql",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/biq-query",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/cloud-sql-my-sql",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/cloud-sql-postgres",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/chargebee",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/construction-wire",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/cosmos-db",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/customer-io",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/databricks",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/datadog",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/dbt-cloud",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/delighted",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/dialpad",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/dittofeed",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/dynamo-db",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/facebook-ads",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/freshdesk",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/front",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/full-story",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/google-cloud-storage",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/github",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/google-ads",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/google-workspace",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/google-sheets",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/harmonic",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/heap",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/honeycomb",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/hub-spot",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/intercom",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/iterable",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/jira",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/klaviyo",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/kustomer",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/linear",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/linkedin-ads",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/lob",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/mailercheck",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/marketo",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/mongo-db",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/microsoft-ads",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/my-sql",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/netsuite",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/outreach",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/pardot",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/pipedrive",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/postgres",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/predict-leads",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/quickbooks",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/recharge",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/redshift",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/redshift-serverless",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/reply-io",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/salesforce",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/segment",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/sftp",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/shopify",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/short-io",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/slack",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/snowflake",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/statsig",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/stripe",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/survicate",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/synapse",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/tixr",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/unbounce",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/uservoice",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/vanilla-forums",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/webhooks",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/zendesk-chat",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/zendesk-support",
  "apidocs.polytomic.com/2021-05-23/configuring-your-connections/connections/zoom-info",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/get-types",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/list",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/create",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/get",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/remove",
  "apidocs.polytomic.com/2021-05-23/api-reference/connections/update",
  "apidocs.polytomic.com/2021-05-23/api-reference/identity/api-v-1-get-identity",
  "apidocs.polytomic.com/2021-05-23/api-reference/organization/list",
  "apidocs.polytomic.com/2021-05-23/api-reference/organization/create",
  "apidocs.polytomic.com/2021-05-23/api-reference/organization/get",
  "apidocs.polytomic.com/2021-05-23/api-reference/organization/update",
  "apidocs.polytomic.com/2021-05-23/api-reference/users/create",
  "apidocs.polytomic.com/2021-05-23/api-reference/users/get",
  "apidocs.polytomic.com/2021-05-23/api-reference/users/remove",
  "apidocs.polytomic.com/2021-05-23/api-reference/users/update",
  "apidocs.polytomic.com/2021-05-23/api-reference/model-sync/list",
  "apidocs.polytomic.com/2021-05-23/api-reference/model-sync/get",
  "apidocs.polytomic.com/2021-05-23/api-reference/model-sync/start",
  "apidocs.polytomic.com/2021-05-23/api-reference/model-sync/executions/get",
]
`;

exports[`polytomic > gets navigation root for /2023-04-25/guides/introduction 1`] = `
{
  "authed": undefined,
  "redirect": "2023-04-25/introduction",
  "type": "notFound",
}
`;

exports[`polytomic > gets navigation root for /2023-04-25/not-found 1`] = `
{
  "authed": undefined,
  "redirect": "2023-04-25/introduction",
  "type": "notFound",
}
`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": false,
  "icon": undefined,
  "id": "root..2024-02-08.uv.guides.guides.getting-started.introduction",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "docs/2024-02-08/pages/getting-started/introduction.mdx",
  "slug": "2024-02-08/guides/introduction",
  "title": "Introduction",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 2`] = `"2024-02-08"`;

exports[`polytomic > gets navigation root for /2024-02-08/guides/introduction 3`] = `"2024-02-08/guides"`;

exports[`polytomic > gets navigation root for /guides/introduction 1`] = `
{
  "canonicalSlug": "2024-02-08/guides/introduction",
  "hidden": false,
  "id": "root..2024-02-08.uv.guides.guides.getting-started.introduction",
  "pageId": "docs/2024-02-08/pages/getting-started/introduction.mdx",
  "slug": "guides/introduction",
  "title": "Introduction",
  "type": "page",
}
`;

exports[`polytomic > gets navigation root for /guides/introduction 2`] = `"2024-02-08"`;

exports[`polytomic > gets navigation root for /guides/introduction 3`] = `"guides"`;
